@@ -1,5 +1,9 @@
 2012-03-26
 
+	* src/menu.c: menu_button_position(): adjusted the menu position.
+
+2012-03-26
+
 	* src/folderview.c
 	  src/summaryview.c: also support Shift+F10 for menu popup.
 
